[workspace]
members = [
    "os",
    "testsuite",

    "examples/stm32f4/minimal",
    "examples/stm32f4/blinky",
    "examples/stm32f4/uart-echo",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"


