[workspace]
resolver = "2"
members = [
    "extra/*",
    "os",
    "examples/*/*",
    "testsuite",
    "testsuite/stm32f3",
    "testsuite/stm32f4",
    "testsuite/stm32g0",
    "testsuite/lm3s6965",
    "testsuite/riscv-virt",
]

[workspace.package]
# common defaults
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/cbiffle/lilos"
rust-version = "1.69"

[workspace.dependencies]
# Internal
lilos = { path = "os", version = "1.1.0", default-features = false }
lilos-list = { path = "extra/list", version = "0.1.0" }
lilos-testsuite = { path = "testsuite" }
lilos-handoff = { path = "extra/handoff" }
lilos-semaphore = { path = "extra/semaphore" }
lilos-rwlock = { path = "extra/rwlock" }
lilos-watch = { path = "extra/watch" }

# External
cfg-if = "1.0.0"
cortex-m = {version = "0.7.4", features = ["inline-asm"]}
cortex-m-rt = {version = "0.7.1"}
cortex-m-semihosting = "0.5.0"
pin-project = "1.1.5"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
stm32-metapac = {version = "15.0", features = ["rt", "pac"]}
rp2040-pac = {version = "0.3", features = ["rt"]}
rp2040-boot2 = "0.2"
scopeguard = { version = "1.2.0", default-features = false }
# Note: we use github versions of riscv crates to get this changeset:
# https://github.com/rust-embedded/riscv/commit/ff4dc30bf74a4ec16370f12be9c6e45306efd5d0
#
# Should switch to stable versions when a new release is available.
riscv = { git = "https://github.com/rust-embedded/riscv.git", features = ["critical-section-single-hart"]  }
riscv-rt = { git = "https://github.com/rust-embedded/riscv.git" }
riscv-semihosting = { git = "https://github.com/rust-embedded/riscv.git" }
riscv-peripheral = { git = "https://github.com/rust-embedded/riscv.git" }

#
# Before you get excited about turning on the workspace.lints table here, note
# that it is silently ignored by our MSRV of 1.69.
#

# Turn on some basic optimizations even in dev for space reasons.
[profile.dev]
codegen-units = 1       # better optimizations
debug = true            # symbols are nice and they don't increase the size on Flash
lto = true              # better optimizations
opt-level = 1           # very basic optimization

# The testsuite ain't tiny and doesn't fit in a 32 kiB M0 without
# cranking up the optimization level:
[profile.dev.package.lilos-testsuite-stm32g0]
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
overflow-checks = true
