[package]
name = "lilos"
version = "1.0.2"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
description = "A tiny embedded OS based around Futures and async."
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabihf"

[features]
default = ["mutex", "spsc", "systick"]
mutex = []
spsc = []
systick = []

[dependencies]
cfg-if.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
pin-project.workspace = true

[lib]
test = false
bench = false
