[package]
name = "lilos"
version = "1.2.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
description = "A tiny embedded OS based around Futures and async."
keywords = ["async", "embedded", "os"]
categories = ["embedded","no-std"]
readme = "README.mkdn"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabihf"

[features]
default = ["mutex", "spsc", "systick"]
mutex = []
spsc = []
systick = []

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {workspace = true, features = ["critical-section-single-core"]}
cortex-m-rt.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch="riscv32"))'.dependencies]
riscv.workspace = true
riscv-rt.workspace = true
riscv-semihosting.workspace = true
riscv-peripheral.workspace = true

[dependencies]
cfg-if.workspace = true
lilos-list.workspace = true
pin-project.workspace = true

[dependencies.portable-atomic]
version = "1.6.0"
default-features = false
features = [
    "fallback",
    "critical-section",
]

[lib]
test = false
bench = false
