[package]
name = "lilos-semaphore"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
description = "A counting semaphore for use with lilos."
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
lilos.workspace = true
pin-project.workspace = true

[lib]
test = false
bench = false
