[package]
name = "lilos-testsuite"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Operating system tests."
repository = "https://github.com/cbiffle/lilos/"
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"
publish = false
rust-version = "1.69"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", default-features = false }
cortex-m-semihosting = "0.5.0"
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
lilos = { path = "../os" }
lilos-handoff = { path = "../handoff" }
panic-semihosting = "0.6.0"

[lib]
test = false
bench = false
