[package]
name = "lilos-testsuite"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Operating system tests."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["handoff"]
handoff = ["dep:lilos-handoff"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
futures.workspace = true
lilos = {workspace = true, features = ["spsc", "systick", "mutex"]}
lilos-handoff = { workspace = true, optional = true }
panic-semihosting.workspace = true

[lib]
test = false
bench = false
