[package]
name = "lilos-testsuite"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Operating system tests."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["handoff", "semaphore", "rwlock", "watch"]
handoff = ["dep:lilos-handoff"]
semaphore = ["dep:lilos-semaphore"]
rwlock = ["dep:lilos-rwlock"]
watch = ["dep:lilos-watch"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
futures.workspace = true
lilos = {workspace = true, features = ["spsc", "systick", "mutex"]}
lilos-handoff = { workspace = true, optional = true }
lilos-semaphore = { workspace = true, optional = true }
lilos-rwlock = { workspace = true, optional = true }
lilos-list.workspace = true
lilos-watch = { workspace = true, optional = true }
portable-atomic = { version = "1.6.0", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {workspace = true, features = ["critical-section-single-core"]}
cortex-m-rt.workspace = true
cortex-m-semihosting.workspace = true
panic-semihosting.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch="riscv32"))'.dependencies]
riscv-semihosting.workspace = true

[lib]
test = false
bench = false
