[package]
name = "lilos-list"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
description = "Allocation-free intrusive doubly-linked wait queues for lilos."
keywords = ["async", "embedded", "os"]
categories = ["embedded", "no-std"]
readme = "README.mkdn"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pin-project.workspace = true
