[package]
name = "lilos-testsuite-stm32f3"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Operating system tests for STM32F303."
repository = "https://github.com/cbiffle/lilos/"
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"
publish = false
rust-version = "1.69"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", default-features = false }
panic-semihosting = "0.6.0"
lilos-testsuite = { path = ".." }

[[bin]]
name = "lilos-testsuite-stm32f3"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
overflow-checks = true
