[package]
name = "lilos-testsuite-stm32g0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Operating system tests for STM32G0."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
lilos-testsuite = {workspace = true, default-features = false}
panic-halt.workspace = true

[[bin]]
name = "lilos-testsuite-stm32g0"
test = false
bench = false

