[package]
name = "lilos-example-rp2040-minimal"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Minimal example for lilos on rp2040."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
lilos = { workspace = true, features = ["systick"] }
panic-halt.workspace = true
rp2040-pac.workspace = true
rp2040-boot2.workspace = true

[[bin]]
name = "lilos-example-rp2040-minimal"
test = false
bench = false
