[package]
name = "lilos-example-rp235x-minimal"
authors = ["0x646b <https://karthik-d-k.github.io/>"]
version = "0.1.0"
description = "Minimal example for lilos on rp235x."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv8m.main-none-eabihf"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
lilos = { workspace = true, features = ["systick"] }
panic-halt.workspace = true
rp235x-pac.workspace = true

[[bin]]
name = "lilos-example-rp235x-minimal"
test = false
bench = false
