[package]
name = "lilos-example-stm32f4-minimal"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Minimal example for lilos on stm32f4."
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
lilos = {workspace = true, features = ["systick"]}
panic-halt.workspace = true
stm32-metapac = {workspace = true, features = ["stm32f407vg"]}

[[bin]]
name = "lilos-example-stm32f4-minimal"
test = false
bench = false
