[package]
name = "lilos-example-stm32g031-minimal"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
description = "Minimal example for lilos on NUCLEO-G031."
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
lilos = { path = "../../../os" }
panic-halt = "0.2.0"

[dependencies.stm32-metapac]
default-features = false
features = ["rt", "pac", "stm32g031k8"]
version = "15.0"

[[bin]]
name = "lilos-example-stm32g031-minimal"
test = false
bench = false
