[package]
name = "lilos-example-stm32h7-uart-echo"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
description = "UART data exchange example for lilos on stm32h7."
repository = "https://github.com/cbiffle/lilos/"
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"
publish = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
futures = { version = "0.3.19", default-features = false, features = ["async-await"] }
pin-utils = "0.1.0"
lilos = { version = "0.3.0-rc1", path = "../../../os" }
panic-halt = "0.2.0"

[dependencies.stm32h7]
default-features = false
features = ["rt", "stm32h743"]
version = "0.14.0"

[[bin]]
name = "lilos-example-stm32h7-uart-echo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
